Prevent search results from overlapping promo widget
Add margin-right: 370px to .results so the list clears the
absolutely-positioned random job promo (#s1.promo, left:71%, w:350px)

--- a/css/main.css
+++ b/css/main.css
@@ -40,6 +40,7 @@ body {
 .results {
   margin-top: 2px;
   margin-left: 90px;
+  margin-right: 370px;
 }
 
 .promo {
